feat: add register company and fix transactions bug
